add fullstack integration
